--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@amplience/sap-product-browser": "^1.0.0",
     "@commercetools/sdk-auth": "^3.0.5",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
-    "dc-extensions-sdk": "^1.1.0",
+    "dc-extensions-sdk": "^2.0.0",
     "dc-management-sdk-js": "^1.4.1",
-    "framer-motion": "^1.6.17",
+    "framer-motion": "^6.2.8",
     "lodash": "^4.17.15",
-    "node-sass": "^4.14.1",
+    "nextjs-cors": "^2.1.0",
+    "node-sass": "^7.0.1",
     "qs": "^6.9.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.4.1",
-    "react-sortablejs": "^1.5.1",
+    "react-scripts": "^5.0.0",
+    "react-sortablejs": "^6.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sortablejs": "^1.10.1"
+    "sortablejs": "^1.14.0"
   },
   "scripts": {
+    "dev": "PORT=3001 react-scripts start",
     "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --watchAll=false",
@@ -70,11 +71,12 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.4",
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^27.4.1",
+    "@types/sortablejs": "^1.10.7",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "jest-enzyme": "^7.1.2",
     "redux-mock-store": "^1.5.4",
-    "sinon": "^8.1.1"
+    "sinon": "^13.0.1"
   }
 }
